Change the language
Change all the paragraphs to English

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <section class="container">
             <h1>To do list</h1>
                 <div class="addTask">
-                    <h3>Agregar tarea</h3>
+                    <h3>Add a task</h3>
                     <textarea autofocus placeholder="Enter a task..."
                     rows="3" cols="30" id="addTaskInput" maxlength='250'></textarea>
-                    <button id="addTask">Agregar</button>
-                    <button id="cancelTask">Cancelar</button>
+                    <button id="addTask">Add</button>
+                    <button id="cancelTask">Cancel</button>
                     <hr>
                     <div class="todolist">
                         <h2>Tareas</h2>
