--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <button id="cancelTask">Cancel</button>
                     <hr>
                     <div class="todolist">
-                        <h2>Tareas</h2>
+                        <h2>Tasks</h2>
                         <div id="tasks">
                         </div>
                     </div>
